[gd_scene load_steps=2 format=3 uid="uid://dui715731rkjn"]

[ext_resource type="Script" path="res://Scripts/UniversalScripts/audio_manager.gd" id="1_8aoa8"]

[node name="AudioManager" type="Node"]
script = ExtResource("1_8aoa8")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]
max_polyphony = 20

[node name="AmbiencePlayer" type="AudioStreamPlayer" parent="."]
max_polyphony = 20
